Fix Vercel serverless setup with proper MongoDB caching

--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "production-server.js",
-      "use": "@vercel/node",
-      "config": {
-        "maxLambdaSize": "50mb"
-      }
+      "src": "api/index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "production-server.js"
+      "dest": "api/index.js"
     }
   ],
   "env": {
