--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node production-server.js",
     "dev": "node production-server.js",
+    "vercel-build": "echo 'Build completed'",
     "build": "echo 'Build completed'",
     "init-db": "node init-db.js",
     "seed": "node seed-data.js",
