--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^17.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "mongodb": "^6.17.0",
     "mongodb-memory-server-core": "^10.1.4",
     "mongoose": "^8.16.3",
